syntax = "proto3";
option go_package = "github.com/fixkme/othello/server/pb/gate";
package gate;

import "ws/ws.proto";

// 通知单个玩家
message CNoticePlayer {
    int64 player_id = 1;
    repeated ws.PBPackage notices = 2;
}
message SNoticePlayer {
}

// 广播给多个玩家
message CBroadcastPlayer {
    repeated int64 player_ids = 1;
    repeated ws.PBPackage notices = 2;
}
message SBroadcastPlayer {
}